--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,33 @@ a{text-decoration:none;}
   color:var(--accent);
 }
 
+.lang-switch {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  display: flex; 
+  gap: 10px;
+  z-index: 9999999;
+}
+
+.lang-switch button {
+  display: flex;
+  background: var(--accent);
+  color: #171c2b;
+  border: none;
+  font-weight: 700;
+  padding: 2px 8px;
+  border-radius: 12px;
+  font-size: 1.1rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.lang-switch:hover {
+
+}
+
 
 .hero{
   padding:4rem 0;
@@ -74,7 +101,7 @@ a{text-decoration:none;}
   background: var(--accent);
   color: #171c2b;
   font-weight: 700;
-  padding: 3px 8px;
+  padding: 4px 10px;
   border-radius: 6px;
   font-size: 0.9rem;
   z-index: 10;
