--- a/styles.css
+++ b/styles.css
@@ -287,7 +287,7 @@ a{text-decoration:none;}
 .animated-underline {
   position: relative;
   display: inline-block;
-  cursor: default; /* opzionale */
+  cursor: default;
 }
 
 .animated-underline::after {
@@ -306,28 +306,38 @@ a{text-decoration:none;}
   width: 100%;
 }
 
+/* NASCOSTO SU PC */
+.lang-select-mobile {
+  display: none;
+}
+
 /* Per i telefonini piccolini */
-@media(max-width:580px){
-  .hero h2{font-size:1.6rem;}
-  .site-header nav{display:none;}
-  .slide img{height:260px;}
-  
+@media (max-width: 600px) {
   .lang-switch {
-    top: 10px;
-    right: 10px;
-    display: flex;
-    flex-direction: row;  /* orizzontale per occupare meno altezza */
-    gap: 6px;
+    display: none;
   }
 
-  .lang-switch button {
-    font-size: 0.75rem;   /* testo più piccolo */
-    padding: 4px 8px;     /* bottoni più compatti */
-    min-width: 38px;
-    height: 28px;
+  /* Mostra menu a tendina */
+  .lang-select-mobile {
+    display: block;
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    z-index: 9999999;
+  }
+
+  .lang-select-mobile select {
+    background: var(--accent);
+    color: #171c2b;
+    font-weight: 700;
+    padding: 6px 10px;
     border-radius: 10px;
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
   }
 }
+
 
 
 .snow {
