--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,6 @@ a{text-decoration:none;}
 
 }
 
-
 .hero{
   padding:4rem 0;
   margin-top: 60px; /* evita sovrapposizione header */
@@ -319,6 +318,7 @@ a{text-decoration:none;}
 
   /* Mostra menu a tendina */
   .lang-select-mobile {
+    margin-top: 60px;
     display: block;
     position: fixed;
     top: 15px;
